--- a/None-game Project Mock-up/None-game Project Mock-up/None-game Project Mock-up.csproj
+++ b/None-game Project Mock-up/None-game Project Mock-up/None-game Project Mock-up.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Data.SQLite">
       <HintPath>..\..\Sqlite Forms\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
